# VulkanTutorial

./: .gitattributes  .gitignore  .gitmodules  00_Introduction.md  01_Overview.md  02_Development_environment.md  07_Depth_buffering.md  08_Loading_models.md  09_Generating_Mipmaps.md  10_Multisampling.md  99_FAQ.md  LICENSE.CC-BY-SA-40  README.md  build_ebook.py  build_ebook_v2.py  config.json  daux.patch  ebook.md  index.html  make_parser.py  pyproject.toml
03_Drawing_a_triangle/: 04_Swap_chain_recreation.md
03_Drawing_a_triangle/00_Setup/: 00_Base_code.md  01_Instance.md  02_Validation_layers.md  03_Physical_devices_and_queue_families.md  04_Logical_device_and_queues.md
03_Drawing_a_triangle/01_Presentation/: 00_Window_surface.md  01_Swap_chain.md  02_Image_views.md
03_Drawing_a_triangle/02_Graphics_pipeline_basics/: 00_Introduction.md  01_Shader_modules.md  02_Fixed_functions.md  03_Render_passes.md  04_Conclusion.md
03_Drawing_a_triangle/03_Drawing/: 00_Framebuffers.md  01_Command_buffers.md  02_Rendering_and_presentation.md
04_Vertex_buffers/: 00_Vertex_input_description.md  01_Vertex_buffer_creation.md  02_Staging_buffer.md  03_Index_buffer.md
05_Uniform_buffers/: 00_Descriptor_layout_and_buffer.md  01_Descriptor_pool_and_sets.md
06_Texture_mapping/: 00_Images.md  01_Image_view_and_sampler.md  02_Combined_image_sampler.md
assets/: main.css
ch/: 00_介绍.md  01_概述.md  02_开发环境.md  07_深度缓冲区.md  08_加载3D模型.md  09_生成多层贴图.md  10_多重采样.md  90_常见问题.md  95_隐私政策.md
ch/03_绘制三角形/: 04_交换链重建.md
ch/04_顶点缓存/: 00_顶点输入描述.md  01_创建顶点缓冲区.md  02_暂存缓冲区.md  03_索引缓冲区.md
ch/05_统一缓冲区/: 00_描述符布局和缓冲区.md  01_描述符池和集合.md
ch/06_纹理映射/: 00_图片.md  01_图像视图和采样器.md  02_组合的图像采样器.md
code/: 00_base_code.cpp  00_base_code_zcj.md  01_instance_creation.cpp  01_instance_creation_zcj.cpp  02_validation_layers-2.cpp  02_validation_layers.cpp  02_validation_layers_zcj.cpp  03_physical_device_selection.cpp  03_physical_device_selection_zcj.cpp  04_logical_device.cpp  04_logical_device_zcj.cpp  05_window_surface.cpp  05_window_surface_zcj.cpp  06_swap_chain_creation-2.cpp  06_swap_chain_creation.cpp  06_swap_chain_creation_zcj.cpp  07_image_views.cpp  07_image_views_zcj.cpp  08_graphics_pipeline.cpp  08_graphics_pipeline_zcj.cpp  09_shader_base.frag  09_shader_base.vert  09_shader_modules.cpp  09_shader_modules_zcj.cpp  10_fixed_functions.cpp  10_fixed_functions_zcj.cpp  11_render_passes.cpp  11_render_passes_zcj.cpp  12_graphics_pipeline_complete.cpp  12_graphics_pipeline_complete_zcj.cpp  13_framebuffers.cpp  13_framebuffers_zcj.cpp  14_command_buffers.cpp  14_command_buffers_zcj.cpp  14_command_buffers_zcj.md  15_hello_triangle.cpp  15_hello_triangle_spoil.cpp  15_hello_triangle_zcj.cpp  16_frames_in_flight.cpp  16_frames_in_flight_zcj.cpp  (+94 more)
code/shaders/: shader.vert
ebook/: Vulkan Tutorial fr.epub  Vulkan Tutorial.epub  cover.kra  vulkan_tutorial_en.epub
en/: 00_Introduction.md  01_Overview.md  02_Development_environment.md  07_Depth_buffering.md  08_Loading_models.md  09_Generating_Mipmaps.md  10_Multisampling.md  11_Compute_Shader.md  90_FAQ.md  95_Privacy_policy.md
en/03_Drawing_a_triangle/: 04_Swap_chain_recreation.md
en/04_Vertex_buffers/: 00_Vertex_input_description.md  01_Vertex_buffer_creation.md  02_Staging_buffer.md  03_Index_buffer.md
en/05_Uniform_buffers/: 00_Descriptor_layout_and_buffer.md  00_Descriptor_set_layout_and_buffer.md  01_Descriptor_pool_and_sets.md
en/06_Texture_mapping/: 00_Images.md  01_Image_view_and_sampler.md  02_Combined_image_sampler.md
fr/: 00_Introduction.md  01_Vue_d'Ensemble.md  01_Vue_d'ensemble.md  02_Environnement_de_Développement.md  02_Environnement_de_développement.md  07_Buffer_de_Profondeur.md  07_Buffer_de_profondeur.md  08_Charger_des_Modèles.md  08_Charger_des_modèles.md  09_Générer_des_Mipmaps.md  09_Générer_des_mipmaps.md  10_Multisampling.md  90_FAQ.md  95_Politique_de_confidentialité.md  99_FAQ.md  build_ebook.py
fr/03_Dessiner_un_triangle/: 04_Recréation_de_la_swap_chain.md
fr/03_Drawing_a_triangle/: 04_Recréation_de_la_swap_chain.md
fr/04_Vertex_buffers/: 00_Description_des_entrées_des_sommets.md  00_Description_des_entrés_vertex.md  01_Création_de_vertex_buffers.md  02_Buffer_intermédiaire.md  03_Index_buffer.md
fr/05_Uniform_buffers/: 00_Descriptor_layout_et_buffer.md  01_Descriptor_pool_et_sets.md
fr/06_Texture_mapping/: 00_Images.md  01_Image_view_et_sampler.md  01_Vue_sur_image_et_sampler.md  02_Sampler_d'image_combiné.md  02_samplers_d'image_combinés.md
fr/code/: 01_instance_creation.cpp  02_validation_layers.cpp  03_physical_device_selection.cpp  04_logical_device.cpp  09_shader_base.vert  16_swap_chain_recreation.cpp  17_shader_vertexbuffer.vert  20_index_buffer.cpp  21_descriptor_layout.cpp  21_shader_ubo.vert  25_shader_textures.vert  25_texture_mapping.cpp  26_shader_depth.frag  26_shader_depth.vert  incremental_patch.sh
fr_France/: 00_Introduction.md  01_Overview.md  01_Vue_d'Ensemble.md  02_Development_environment.md  build_ebook.py  config.json
fr_France/04_Vertex_buffers/: 00_Description_des_entrés_vertex.md  01_Vertex_buffer_creation.md
fr_France/05_Uniform_buffers/: 00_Descriptor_layout_and_buffer.md
fr_France/06_Texture_mapping/: 00_Images.md
fr_France/code/: 00_base_code.cpp  07_image_views.cpp  08_graphics_pipeline.cpp  09_shader_base.frag  09_shader_base.vert  10_fixed_functions.cpp  14_command_buffers.cpp  17_shader_vertexbuffer.vert  17_vertex_input.cpp  19_staging_buffer.cpp  25_shader_textures.vert  26_depth_buffering.cpp  26_shader_depth.frag  27_model_loading.cpp  28_mipmapping.cpp
kr/: 00_Introduction.md  01_Overview.md  02_Development_environment.md  07_Depth_buffering.md  08_Loading_models.md  09_Generating_Mipmaps.md  10_Multisampling.md  11_Compute_Shader.md  90_FAQ.md  95_Privacy_policy.md  kr_glossary.md
kr/03_Drawing_a_triangle/: 04_Swap_chain_recreation.md
kr/04_Vertex_buffers/: 00_Vertex_input_description.md  01_Vertex_buffer_creation.md  02_Staging_buffer.md  (+1 more)
zh/: 00_Introduction.md  01_Overview.md  91_About_Chinese_translation.md
zh-cn/: 00_Introduction.md
(+108 files in other folders)
